Fix Bug 323272 - Querying a Microsoft Exchange's Active Directory via LDAP is extremely slow

FIXED-IN: 4.11.1
BUG: 323272